objects/Topic__c.object
<CustomObject>
    <fields>
        <fullName>Business_Category__c</fullName>
        <label>Business Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Category 1</fullName>
                </value>
                <value>
                    <fullName>Business Category 2</fullName>
                </value>
                <value>
                    <fullName>Business Category 3</fullName>
                </value>
                <value>
                    <fullName>Business Category 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Category 1</fullName>
                </value>
                <value>
                    <fullName>Category 2</fullName>
                </value>
                <value>
                    <fullName>Category 3</fullName>
                </value>
                <value>
                    <fullName>Category 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sub Category 1</fullName>
                </value>
                <value>
                    <fullName>Sub Category 2</fullName>
                </value>
                <value>
                    <fullName>Sub Category 3</fullName>
                </value>
                <value>
                    <fullName>Sub Category 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Topic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>